--- a/config-client-dev.yml
+++ b/config-client-dev.yml
@@ -1,5 +1,8 @@
 spring:
   datasource:
+      type: com.alibaba.druid.pool.DruidDataSource
+      #指定driver的类名，默认从jdbc url中自动探测.
+      driverClassName: com.mysql.jdbc.Driver
       #dev
       url: jdbc:mysql://localhost:3306/test
       username: root
