--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -4,7 +4,7 @@ spring:
       #指定driver的类名，默认从jdbc url中自动探测.
       driverClassName: com.mysql.jdbc.Driver
       #dev
-      url: jdbc:mysql://localhost:3306/test
+      url: jdbc:mysql://localhost:3306/sys_admin
       username: root
       password: Ysw1023@qq.com
 
